[gd_scene load_steps=5 format=2]

[ext_resource path="res://Computer/Computer.glb" type="PackedScene" id=1]
[ext_resource path="res://Computer/Computer.gd" type="Script" id=2]
[ext_resource path="res://Interface/HUD.tres" type="Theme" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.917697, 1 )

[node name="Computer" type="Spatial"]
script = ExtResource( 2 )

[node name="Computer" parent="." instance=ExtResource( 1 )]

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.77865, 0 )
shape = SubResource( 1 )

[node name="OrdersPanel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="OrdersPanel"]
anchor_left = 0.0625
anchor_top = 0.106667
anchor_right = 0.9375
anchor_bottom = 0.853333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WindowDialog" type="WindowDialog" parent="OrdersPanel/MarginContainer"]
visible = true
margin_right = 896.0
margin_bottom = 447.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="OrdersPanel/MarginContainer/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 0.767857
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="OrdersPanel/MarginContainer/WindowDialog/ScrollContainer"]

[node name="HBoxContainer" type="HBoxContainer" parent="OrdersPanel/MarginContainer/WindowDialog"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -22.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="Button" parent="OrdersPanel/MarginContainer/WindowDialog/HBoxContainer"]
margin_left = 303.0
margin_right = 403.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
disabled = true
text = "Previous"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="OrdersPanel/MarginContainer/WindowDialog/HBoxContainer"]
margin_left = 407.0
margin_right = 473.0
margin_bottom = 22.0
text = "Page: "

[node name="Page" type="Label" parent="OrdersPanel/MarginContainer/WindowDialog/HBoxContainer"]
margin_left = 477.0
margin_right = 488.0
margin_bottom = 22.0
text = " "

[node name="Next" type="Button" parent="OrdersPanel/MarginContainer/WindowDialog/HBoxContainer"]
margin_left = 492.0
margin_right = 592.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RetrieveOrders" type="HTTPRequest" parent="."]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="pressed" from="OrdersPanel/MarginContainer/WindowDialog/HBoxContainer/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="OrdersPanel/MarginContainer/WindowDialog/HBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="request_completed" from="RetrieveOrders" to="." method="_on_RetrieveOrders_request_completed"]
